--- a/contact_2.html
+++ b/contact_2.html
@@ -1,3 +1,7 @@
+<div class="">
+  <title> Let's get in touch! </title>
+</div>
+
 <form class="wj-contact" action="https://formspree.io/{{site.email}}" method="POST">
     <input type="text" name="email" placeholder="Email Address">
     <textarea type="text" name="content" rows="10" placeholder="Message"></textarea>
@@ -9,24 +13,25 @@
 
 <style>
 form.wj-contact input[type="text"], form.wj-contact textarea[type="text"] {
-    width: 100%;
+    width: 60%;
     vertical-align: middle;
     margin-top: 0.25em;
     margin-bottom: 0.5em;
     padding: 0.75em;
-    font-family: monospace, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-weight: lighter;
     border-style: solid;
-    border-color: #444;
-    outline-color: #2e83e6;
+    border-color: #5198DF;
+    outline-color: #5198DF;
     border-width: 1px;
-    border-radius: 3px;
+    border-radius: 10px;
     transition: box-shadow .2s ease;
 }
 
 form.wj-contact input[type="submit"] {
     outline: none;
     color: white;
+    font: Helvetica, Arial;
     background-color: #2e83e6;
     border-radius: 3px;
     padding: 0.5em;
