--- a/contact_2.html
+++ b/contact_2.html
@@ -1,7 +1,3 @@
-<div class="">
-  <title> Let's get in touch! </title>
-</div>
-
 <form class="wj-contact" action="https://formspree.io/{{site.email}}" method="POST">
     <input type="text" name="email" placeholder="Email Address">
     <textarea type="text" name="content" rows="10" placeholder="Message"></textarea>
@@ -38,5 +34,6 @@ form.wj-contact input[type="submit"] {
     margin: 0.25em 0 0 0;
     border: 1px solid transparent;
     height: auto;
+    position: absolute;
 }
 </style>
